<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="restaurant"
            type="com.example.zomato.data.RestaurantXSearch" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/order_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/order"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
            app:icon="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".restaurantDetailPage.RestaurantDetailFragment">


                <ImageView
                    android:id="@+id/imageView"
                    setRestaurantSearchImage="@{restaurant.featured_image}"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />


                <ImageView
                    android:id="@+id/back"
                    android:background="@drawable/back_bachground"
                    android:elevation="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:tintMode="src_atop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@android:color/white" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="172dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <TextView
                            android:id="@+id/res_title"
                            style="@style/TextAppearance.MdcTypographyStyles.Headline4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@{restaurant.name}"
                            app:layout_constraintBottom_toTopOf="@+id/res_address"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Barbeque" />

                        <TextView
                            android:id="@+id/res_address"
                            style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:text="@{restaurant.location.address}"
                            app:layout_constraintBottom_toTopOf="@+id/res_locality"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/res_title"
                            tools:text="77/B Raja Ram Mohan Sarani" />

                        <TextView
                            android:id="@+id/res_locality"
                            style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@{restaurant.location.locality}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/res_address"
                            tools:text="Kolkata" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cuisines"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/cuisinesRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/my_chip" />

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            android:text="@string/timings" />

                        <TextView
                            android:id="@+id/timing"
                            style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                            setTiming="@{restaurant}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            tools:text="11 AM to 10 PM (Mon-Thu),11 AM to 11 PM (Fri-Sat),12 Noon to 10 PM (Sun)" />

                        <TextView
                            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            android:text="@string/rating" />

                        <RatingBar
                            style="@style/ratingBar"
                            setRestaurantStars="@{restaurant.user_rating.aggregate_rating}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            android:progressTint="?attr/colorPrimaryVariant"
                            tools:rating="4.5" />

                        <TextView
                            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            android:text="@string/average_cost_for_two" />

                        <TextView
                            android:id="@+id/avgcost"
                            style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                            setAvgCost="@{restaurant}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            tools:text="500" />

                        <TextView
                            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            android:text="@string/contact_us" />

                        <TextView
                            android:id="@+id/mobileNo"
                            style="@style/TextAppearance.MdcTypographyStyles.Caption2"
                            setMobileNo="@{restaurant}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginTopvalue"
                            tools:text="9330663085" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>